# degov

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DeGov Collaborate Docs.md  LICENSE.md  NEXTJS_16_UPGRADE_PROGRESS.md  README.md  WORKFLOW.md  degov-blocknumber.yml  degov-no-timelock.yml  degov.yml  docker-compose.yml  justfile  movedao.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/indexer/: .gitignore  Cargo.toml  README.md  indexer.example.yml  justfile
apps/indexer/fixtures/: README.md
apps/indexer/migrations/: 0001_init.sql  0002_hot_path_runtime_indexes.sql  0003_onchain_refresh_runtime_indexes.sql  0004_onchain_refresh_claim_retry_indexes.sql  0005_onchain_refresh_failed_ready_retry_index.sql  0006_onchain_refresh_pending_ready_claim_index.sql  0007_checkpoint_adaptive_chunk_state.sql  0008_indexer_latest_head.sql  0009_provisional_proposal_event_fields.sql  0010_provisional_vote_overlays.sql  0011_delegate_profile_materialization.sql
apps/indexer/reference/: schema.graphql
apps/indexer/schema/: postgres.sql
apps/indexer/scripts/: check-postgres-schema.mjs  check-rust-conventions.mjs  check-rust-conventions.test.mjs  compatibility-preflight.mjs  indexer-accuracy-audit.mjs  indexer-accuracy-audit.test.mjs  indexer-accuracy-diagnose.mjs  indexer-accuracy-diagnose.test.mjs  indexer-accuracy-targets.json  indexer-diagnostics.mjs  indexer-diagnostics.test.mjs  indexer-reconcile-diagnose.mjs  indexer-reconcile-diagnose.test.mjs  indexer-tally-onchain-e2e.mjs  indexer-tally-onchain-e2e.test.mjs  placeholder.mjs  runtime-packaging.test.mjs  smoke-postgres-init.mjs  smoke-postgres-init.test.mjs  staging-deployment-contract.test.mjs  v4-parity-audit.mjs  v4-parity-audit.test.mjs
apps/indexer/src/: chain_tool.rs  checkpoint.rs  config.rs  dao_event.rs  data_metric.rs  datalens.rs  delegate_profile.rs  error.rs  evm_log.rs  fixtures.rs  lib.rs  main.rs  metrics.rs  onchain_refresh.rs  planner.rs  postgres_store.rs  power_reconcile.rs  proposal_metadata.rs  proposal_projection.rs  provisional.rs  runner.rs  runtime_config.rs  timelock_projection.rs  token_projection.rs  vote_projection.rs
apps/indexer/tests/: chain_tool_read_plan.rs  checkpoint_plan.rs  (+28 more)
(+437 files in other folders)
