[package]
name = "degov-datalens-indexer"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
datalens-sdk = { git = "https://github.com/ringecosystem/datalens", rev = "1744283cd1547240e0bc290b5fa3c5d1c55e74d6" }
figment = { version = "0.10.19", features = ["env"] }
log = "0.4.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "2.0.17"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "env-filter", "fmt"] }

[dev-dependencies]
temp-env = "0.3.6"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync"] }
